--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "version": 2,
   "builds": [
-      {
-          "src": "./app.js",
-          "use": "@vercel/node"
-      }
+    {
+      "src": "package.json", 
+      "use": "vercel-sapper"
+    }
   ],
   "routes": [
       {
